Changes made according to the requirements

--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
                     <form id="quoteForm">
                         <div class="form-group">
                             <label for="sizeDimensions">Size & Dimensions *</label>
-                            <input type="text" id="sizeDimensions" name="sizeDimensions" placeholder="e.g., 4ft x 6ft, 2m x 3m" required>
+                            <input type="text" id="sizeDimensions" name="sizeDimensions" placeholder="e.g., 4ft x 6ft, 2inches x 3inches " required>
                         </div>
                         
                         <div class="form-group">
@@ -147,7 +147,6 @@
                                 <option value="metal">Metal</option>
                                 <option value="acrylic">Acrylic</option>
                                 <option value="aluminum">Aluminum</option>
-                                <option value="vinyl">Vinyl</option>
                                 <option value="wood">Wood</option>
                                 <option value="other">Other</option>
                             </select>
@@ -212,7 +211,7 @@
                             <select id="deadline" name="deadline" required>
                                 <option value="">Select timeline</option>
                                 <option value="standard">Standard (15-17 business days)</option>
-                                <option value="rush">Rush (12 business days - 25% additional cost)</option>
+                                <option value="rush">Rush (12 business days - 20% additional cost)</option>
                                 <option value="flexible">Flexible</option>
                             </select>
                         </div>
