System prompt updated v1.1

--- a/templates/index.html
+++ b/templates/index.html
@@ -246,6 +246,7 @@
                         <div class="form-actions">
                             <button type="submit" class="btn-primary">Submit Quote Request</button>
                             <button type="button" class="btn-secondary" id="cancelQuote">Cancel</button>
+                            <button type="button" class="btn-tertiary" id="startFreshBtn">Start Fresh</button>
                         </div>
                     </form>
                 </div>
