Changes made related to hubspot

--- a/templates/index.html
+++ b/templates/index.html
@@ -157,6 +157,7 @@
                                     <div class="logo-preview-list" id="logoPreviewList"></div>
                                 </div>
                             </div>
+                            <input type="hidden" id="logoCount" name="logoCount" value="0">
                         </div>
                         
                         <div class="form-group">
